@@ -4,6 +4,7 @@ p. На этой странице представлены все изменен
 
 h2. TheQube 0.8
 
+* Добавлено: Добавлена поддержка длинных личных сообщений (до 10000 символов).
 * Добавлено: Добавлен сервис сокращения ссылок "ux.nu":http://ux.nu.
 * Изменено: Улучшена технология хранения данных учётной записи Твиттера.
 * Исправлено: "#49: Для авторизации второй сессии требуется перезапуск TheQube":https://github.com/Oire/theqube/issues/49. Благодарим Мануэля Кортеса за это замечательное исправление!
